--- a/style/contact.css
+++ b/style/contact.css
@@ -1,3 +1,44 @@
-.contact{
-    background-color: rgb(77, 147, 207);
+form{
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+    gap: 10px;
+}
+
+form div button{
+    padding: 6px;
+    border-radius: 5px;
+}
+
+[type=reset]{
+    background-color: red;
+    color: white;
+    font-weight: bold;
+}
+
+[type=submit]{
+    background-color: green;
+    color: white;
+    font-weight: bold;
+}
+
+input, textarea, select{
+    background-color: indianred;
+    border-radius: 5px;
+    border: 2px solid rgb(108, 37, 37);
+    padding: 5px;
+}
+
+.contact div{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    font-size: 30px;
+    margin: 10px;
+    padding: 10px;
+    
 }
