--- a/style/disenos.css
+++ b/style/disenos.css
@@ -1,5 +1,12 @@
+h1{
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 60px;
+}
+
 #carouselExampleAutoplaying{
-    width: 80vw;
+    width: 40%;
     margin: auto;
 }
 
