--- a/style/about.css
+++ b/style/about.css
@@ -2,6 +2,11 @@
     padding-top: 50px;
 }
 
+.about h1{
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
 .cards{
     display: flex;
     flex-wrap: wrap;
