--- a/style/general.css
+++ b/style/general.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+
+
 .outfit {
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
@@ -29,7 +31,8 @@ header img{
 }
 
 body{
-    background-color: hsl(0, 89%, 82%);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../assets/img/fondo.JPG);
+    background-size: cover;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -66,6 +69,7 @@ header{
 }
 
 footer{
+  color: white;
   background-color: rgba(205, 92, 92, 0.324);
   position: fixed;
   bottom: 0;
